--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@ footer {
     <header>
         <div class="container">
             <div class="profile-thumb"></div>
-            <h1>Sakthi</h1>
-            <h3>Web Developer / Designer</h3>
+            <h1>Durgadevi</h1>
+            <h3>Student</h3>
         </div>
     </header>
 
@@ -182,10 +182,10 @@ footer {
             <div class="row">
                 <div class="col-md-4">
                     <ul class="info">
-                        <li><span>Full Name:</span>Sakthi</li>
-                        <li><span>Phone:</span>+ 1234 567 890</li>
-                        <li><span>Email:</span>Sakthi111@gmail.com</li>
-                        <li><span>Address:</span>Your address</li>
+                        <li><span>Full Name:</span>Durgadevi</li>
+                        <li><span>Phone:</span>+ 8778587576</li>
+                        <li><span>Email:</span>drugadevidurgadevi0@gmail.com</li>
+                        <li><span>Address:</span>Kadalmangalam</li>
                     </ul>
                 </div>
                 <div class="col-md-8">
@@ -199,7 +199,7 @@ footer {
 
     <section id="resume">
         <div class="container">
-            <button class=" btn btn-primary"><a href=".pdf">My Resume</a></button>
+            <button class=" btn btn-primary"><a href="Resume.jpg">My Resume</a></button>
             <div class="row">
                 <div class="col-md-12">
                     <ul class="timeline">
@@ -208,10 +208,10 @@ footer {
                             <div class="timeline-panel">
                                 <h3>Courses</h3>               
                                 <ul>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
+                                    <li>Html</li>
+                                    <li>Java</li>
+                                    <li>Python</li>
+                                    <li>C++</li>
                                 </ul>
                             </div>
                         </li>
@@ -221,9 +221,9 @@ footer {
                                 <h3>Skills</h3>
                                 <ul>
                                     <li>HTML</li>
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
+                                    <li>Python</li>
+                                    <li>Java</li>
+                                    <li>C++</li>
                                 </ul>
                             </div>
                         </li>
@@ -239,4 +239,5 @@ footer {
         </div>
     </footer>
 </body>
+
 </html>
